updated groupId of pom.xml files